--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#448AFF</color>
+    <color name="colorAccent2">#448AFF</color>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
